--- a/project.html
+++ b/project.html
@@ -1,92 +1,85 @@
 <!doctype html>
 <html lang="ko">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>프로젝트 상세</title>
-<link rel="stylesheet" href="common.css"/>
-<link rel="stylesheet" href="app.min.css"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
-<link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet"/>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>프로젝트 상세 - Project.PAW</title>
+  <link rel="stylesheet" href="common.css"/>
+  <link rel="stylesheet" href="app.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+  <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet"/>
+  <!-- ✅ Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
 
-<style>
-  :root{
-    --ink:#111;
-    --sub:#555;
-    --accent:#E87722;
-    --line:#eaeaea;
-    --bg:#fafafa;
-  }
-  body{margin:0;background:var(--bg);color:var(--ink);
-       font-family:'SUIT Variable','Pretendard','Inter',system-ui,sans-serif}
-  .wrap{max-width:860px;margin:0 auto;padding:20px 16px}
+  <style>
+    :root{
+      --ink:#111;
+      --sub:#555;
+      --accent:#E87722;
+      --line:#eaeaea;
+      --bg:#fafafa;
+    }
+    body{
+      margin:0;
+      background:var(--bg);
+      color:var(--ink);
+      font-family:'SUIT Variable','Pretendard','Inter',system-ui,sans-serif
+    }
+    .wrap{max-width:860px;margin:0 auto;padding:20px 16px}
 
-  .hero-card{background:#fff;border-radius:20px;overflow:hidden;
-             box-shadow:0 6px 14px rgba(0,0,0,0.08);margin-bottom:24px}
-  .hero-body{padding:24px}
-  .hero-body h1{font-size:1.9rem;font-weight:900;margin:0 0 8px;color:var(--ink)}
-  .hero-body .muted{color:var(--sub);margin-bottom:12px;font-size:1rem}
-  .progress{background:#e5e7eb;height:18px;border-radius:12px;overflow:hidden;margin:14px 0}
-  .progress .bar{height:100%;background:var(--accent);color:#fff;
-                 text-align:center;font-size:.85rem;font-weight:600}
-  .stats{display:flex;justify-content:space-between;font-size:1rem;color:var(--sub);margin-top:8px}
-  .stats span strong{font-size:1.1rem;font-weight:800;color:var(--ink);margin-left:4px}
-  .hero-body .btn.primary{display:block;margin-top:18px;text-align:center;
-    padding:14px 18px;background:var(--accent);color:#fff;border-radius:12px;
-    font-weight:700;font-size:1.05rem;text-decoration:none}
-  .hero-body .btn.primary:hover{background:#d56612}
+    /* Hero */
+    .hero-card{background:#fff;border-radius:20px;overflow:hidden;
+               box-shadow:0 6px 14px rgba(0,0,0,0.08);margin-bottom:24px}
+    .overlay{
+      position:absolute;bottom:0;left:0;right:0;
+      background:linear-gradient(to top,rgba(0,0,0,.6),rgba(0,0,0,0));
+      color:#fff;padding:20px;
+    }
+    .overlay .badge{background:var(--accent);padding:6px 12px;border-radius:8px;font-weight:700}
+    .overlay h1{margin:8px 0;font-size:1.6rem;font-weight:900}
+    .overlay .summary{font-size:1rem;opacity:.9}
+    .key-message{margin-top:6px;color:#FFD166;font-weight:700}
 
-  .section-card{background:#fff;border-radius:16px;padding:28px;margin-top:22px;
-                box-shadow:0 4px 10px rgba(0,0,0,0.05)}
-  .section-card h2{font-size:1.3rem;font-weight:800;margin-bottom:14px;color:var(--accent)}
-  .section-card p{font-size:1.05rem;line-height:1.7;color:var(--ink)}
+    .hero-body{padding:24px}
+    .hearts{font-size:1.1rem;font-weight:700;color:var(--accent);margin-bottom:12px}
+    .progress{background:#e5e7eb;height:16px;border-radius:12px;overflow:hidden;margin:14px 0}
+    .progress .bar{height:100%;background:var(--accent);color:#fff;
+                   text-align:center;font-size:.8rem;font-weight:600}
+    .stats{display:flex;justify-content:space-between;font-size:.95rem;color:var(--sub);margin-top:8px}
+    .stats span strong{font-size:1.05rem;font-weight:800;color:var(--ink);margin-left:4px}
+    .hero-body .btn.primary{display:block;margin-top:18px;text-align:center;
+      padding:14px 18px;background:var(--accent);color:#fff;border-radius:12px;
+      font-weight:700;font-size:1.05rem;text-decoration:none}
+    .hero-body .btn.primary:hover{background:#d56612}
 
-  .info-card p{margin:6px 0;font-size:1rem;color:var(--sub)}
+    .section-card{background:#fff;border-radius:16px;padding:28px;margin-top:22px;
+                  box-shadow:0 4px 10px rgba(0,0,0,0.05)}
+    .section-card h2{font-size:1.3rem;font-weight:800;margin-bottom:14px;color:var(--accent)}
+    .section-card p{font-size:1.05rem;line-height:1.7;color:var(--ink)}
 
-  .share-buttons{display:flex;gap:12px;flex-wrap:wrap;margin-top:14px}
-  .share-buttons button{flex:1;min-width:120px;display:flex;align-items:center;justify-content:center;
-    gap:8px;padding:12px 18px;border-radius:12px;font-weight:600;font-size:.95rem;
-    cursor:pointer;border:none;transition:.2s}
-  .share-buttons button:hover{transform:translateY(-2px)}
-  .share-kakao{background:#FEE500;color:#111}
-  .share-insta{background:#E4405F;color:#fff}
-  .share-copy{background:#6b7280;color:#fff}
+    .info-card p{margin:6px 0;font-size:1rem;color:var(--sub)}
 
-  .cta-dock{position:fixed;bottom:16px;right:16px;z-index:50;display:flex;flex-direction:column;gap:10px;
-    filter:drop-shadow(0 6px 12px rgba(0,0,0,0.15))}
-  .cta-dock a{background:var(--accent);color:#fff;padding:12px 18px;border-radius:14px;
-    font-weight:700;font-size:.95rem;text-align:center;text-decoration:none}
-  .cta-dock a:hover{background:#d56612}
+    .share-buttons{display:flex;gap:12px;flex-wrap:wrap;margin-top:14px}
+    .share-buttons button{flex:1;min-width:120px;display:flex;align-items:center;justify-content:center;
+      gap:8px;padding:12px 18px;border-radius:12px;font-weight:600;font-size:.95rem;
+      cursor:pointer;border:none;transition:.2s}
+    .share-buttons button:hover{transform:translateY(-2px)}
+    .share-kakao{background:#FEE500;color:#111}
+    .share-insta{background:#E4405F;color:#fff}
+    .share-copy{background:#6b7280;color:#fff}
 
-  /* ✅ 후기 스타일 */
-  .preview{display:flex;gap:8px;margin-top:8px;flex-wrap:wrap}
-  .preview img{width:80px;height:80px;object-fit:cover;border-radius:6px;border:1px solid #ddd}
-  .review-card{border-top:1px solid #eee;padding:12px 0}
-  .review-card .author{font-weight:700;color:var(--ink);margin-bottom:4px}
-  .review-card .text{white-space:pre-line;color:var(--sub)}
-  .review-card .photos{display:flex;gap:8px;margin-top:10px;flex-wrap:wrap}
-  .review-card .photos img{width:100px;height:100px;object-fit:cover;border-radius:8px;border:1px solid #eee}
-</style>
+    .cta-dock{position:fixed;bottom:16px;right:16px;z-index:50;display:flex;flex-direction:column;gap:10px;
+      filter:drop-shadow(0 6px 12px rgba(0,0,0,0.15))}
+    .cta-dock a{background:var(--accent);color:#fff;padding:12px 18px;border-radius:14px;
+      font-weight:700;font-size:.95rem;text-align:center;text-decoration:none}
+    .cta-dock a:hover{background:#d56612}
+  </style>
 </head>
 <body>
   <div data-include="header"></div>
 
   <main class="wrap">
     <div id="project-detail"><div class="muted">불러오는 중...</div></div>
-
-    <!-- ✅ 후기 섹션 -->
-    <section class="section-card" id="reviews">
-      <h2>후기</h2>
-      <form id="reviewForm" style="margin-bottom:20px">
-        <input type="text" id="reviewer" placeholder="이름 또는 닉네임" required/>
-        <textarea id="reviewText" placeholder="후기를 남겨주세요" required></textarea>
-        <input type="file" id="reviewImages" accept="image/*" multiple/>
-        <div id="reviewPreview" class="preview"></div>
-        <button type="submit" class="btn primary">등록</button>
-      </form>
-      <div id="reviewList" class="review-list muted">아직 후기가 없습니다.</div>
-    </section>
   </main>
 
   <div class="cta-dock" id="ctaDock" style="display:none">
@@ -95,45 +88,97 @@
 
   <div data-include="footer"></div>
 
+  <!-- ✅ Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <script type="module">
     import { injectLayout } from './js/include.js';
     import { getProjectById } from './js/api.js';
-    import { storage, db, authReady } from './js/firebase.js';
-    import { ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-storage.js";
-    import { collection, addDoc, getDocs, query, orderBy } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
+    import { storage } from './js/firebase.js';
+    import { ref, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-storage.js";
 
     injectLayout({ active:'project' });
 
     const $detail=document.getElementById('project-detail');
     const $ctaDock=document.getElementById('ctaDock');
     const $ctaBtn=document.getElementById('ctaBtn');
+
     const fmt=n=>Number(n||0).toLocaleString('ko-KR');
 
-    function getId(){return new URLSearchParams(location.search).get("id");}
-    const projectId=getId();
+    function candidatesOf(p){
+      const out=[];const push=v=>{if(typeof v==='string'&&v.trim())out.push(v.trim());};
+      ['representativeImageUrl','coverUrl','mainImageUrl','thumbnailUrl','image'].forEach(k=>push(p[k]));
+      ['galleryUrls','images','photos','files','receiptUrls'].forEach(k=>{
+        const arr=p[k];if(Array.isArray(arr))arr.forEach(it=>{
+          if(typeof it==='string') push(it);
+          else if(it&&(it.url||it.path)) push(it.url||it.path);
+        });
+      });
+      return out;
+    }
 
-    /* ------------------- 프로젝트 상세 ------------------- */
-    async function renderProject(){
-      if(!projectId){$detail.innerHTML='<div class="muted">잘못된 접근입니다.</div>';return;}
+    async function toHttpUrl(raw){
+      if(!raw) return null;
+      let v=String(raw).trim();
+      if(/^(https?:|data:|blob:)/i.test(v)) return v;
+      if(v.startsWith('/')) v=v.slice(1);
+      try{return await getDownloadURL(ref(storage,v));}catch{return null;}
+    }
+
+    async function galleryHttpUrls(p){
+      const cands=candidatesOf(p);
+      const urls=await Promise.all(cands.map(toHttpUrl));
+      const uniq=[],seen=new Set();
+      for(const u of urls){if(u&&!seen.has(u)){seen.add(u);uniq.push(u);}}
+      return uniq.length?uniq:['img/placeholder.svg'];
+    }
+
+    function getId(){return new URLSearchParams(location.search).get("id");}
+
+    async function render(){
+      const id=getId();
+      if(!id){$detail.innerHTML='<div class="muted">잘못된 접근입니다.</div>';return;}
+
       try{
-        const p=await getProjectById(projectId);
+        const p=await getProjectById(id);
         if(!p){$detail.innerHTML='<div class="muted">존재하지 않는 프로젝트입니다.</div>';return;}
 
+        const imgs=await galleryHttpUrls(p);
         const goal=Number(p.goalAmount||0);
         const current=Number(p.currentAmount||0);
         const rate=goal?Math.floor(current/goal*100):0;
 
         $detail.innerHTML=`
+          <!-- Hero -->
           <section class="hero-card">
+            <div id="carouselProject" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                ${imgs.map((url,i)=>`
+                  <div class="carousel-item ${i===0?'active':''}">
+                    <img src="${url}" class="d-block w-100" style="height:340px;object-fit:cover" alt="img${i}">
+                    <div class="overlay">
+                      <span class="badge">${p.adminApproved?'진행중':'대기중'}</span>
+                      <h1>${p.name??'(이름 없음)'}</h1>
+                      <p class="summary">${p.summary??''}</p>
+                      ${p.keyMessage?`<p class="key-message">❝ ${p.keyMessage} ❞</p>`:''}
+                    </div>
+                  </div>`).join('')}
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselProject" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+              </button>
+            </div>
+
             <div class="hero-body">
-              <h1>${p.name??'(이름 없음)'}</h1>
-              <div class="muted">구조자: ${p.rescuerName??'익명'}</div>
+              <div class="hearts">❤️ 연결된 마음 <strong>${p.supporterCount??0}</strong>명</div>
               <div class="progress"><div class="bar" style="width:${rate}%">${rate}%</div></div>
               <div class="stats">
                 <span>목표 <strong>${fmt(goal)}</strong>원</span>
                 <span>현재 <strong>${fmt(current)}</strong>원</span>
+                <span>구조자 <strong>${p.rescuerName??'익명'}</strong></span>
               </div>
               ${p.registrantKakaoId?`<a href="https://open.kakao.com/o/${p.registrantKakaoId}" target="_blank" class="btn primary">참여하기</a>`:''}
             </div>
@@ -147,95 +192,34 @@
           <section class="section-card info-card">
             <h2>프로젝트 정보</h2>
             <p><strong>구조자 부담금:</strong> ${fmt(p.rescuerContribution)}원</p>
-            <p><strong>지지자 수:</strong> ${fmt(p.supporterCount||0)}명</p>
             <p><strong>승인 상태:</strong> ${p.adminApproved?'승인됨':'대기중'}</p>
+          </section>
+
+          <section class="section-card">
+            <h2>공유하기</h2>
+            <div class="share-buttons">
+              <button class="share-kakao" id="shareKakao"><i class="fa-solid fa-comment"></i> 카카오톡</button>
+              <button class="share-insta" id="shareInsta"><i class="fa-brands fa-instagram"></i> 인스타그램</button>
+              <button class="share-copy" id="shareCopy"><i class="fa-solid fa-link"></i> 링크복사</button>
+            </div>
           </section>
         `;
 
         if(p.registrantKakaoId){
           $ctaDock.style.display='flex';
           $ctaBtn.href=`https://open.kakao.com/o/${p.registrantKakaoId}`;
+          $ctaBtn.textContent='참여하기';
         }
+
+        document.getElementById("shareCopy")?.addEventListener("click",()=>navigator.clipboard.writeText(window.location.href).then(()=>alert("링크 복사됨!")));
+        document.getElementById("shareKakao")?.addEventListener("click",()=>window.open("https://sharer.kakao.com/talk/friends/picker/link","_blank"));
+        document.getElementById("shareInsta")?.addEventListener("click",()=>alert("인스타그램은 직접 URL을 복사해 공유해주세요."));
       }catch(e){
         console.error(e);
         $detail.innerHTML='<div class="muted">프로젝트를 불러오지 못했습니다.</div>';
       }
     }
-
-    /* ------------------- 후기 ------------------- */
-    const reviewForm=document.getElementById("reviewForm");
-    const reviewPreview=document.getElementById("reviewPreview");
-    const reviewList=document.getElementById("reviewList");
-
-    document.getElementById("reviewImages").addEventListener("change",e=>{
-      reviewPreview.innerHTML="";
-      [...e.target.files].forEach(file=>{
-        const reader=new FileReader();
-        reader.onload=ev=>{
-          const img=document.createElement("img");
-          img.src=ev.target.result;
-          reviewPreview.appendChild(img);
-        };
-        reader.readAsDataURL(file);
-      });
-    });
-
-    reviewForm.addEventListener("submit",async e=>{
-      e.preventDefault();
-      await authReady;
-
-      const reviewer=document.getElementById("reviewer").value.trim();
-      const text=document.getElementById("reviewText").value.trim();
-      const files=[...document.getElementById("reviewImages").files];
-
-      if(!reviewer||!text) return;
-
-      try{
-        const imageUrls=[];
-        for(const file of files){
-          const storageRef=ref(storage,`reviews/${projectId}/${Date.now()}-${file.name}`);
-          await uploadBytes(storageRef,file);
-          const url=await getDownloadURL(storageRef);
-          imageUrls.push(url);
-        }
-
-        await addDoc(collection(db,`reviews_${projectId}`),{
-          reviewer,text,imageUrls,date:Date.now()
-        });
-
-        reviewForm.reset();
-        reviewPreview.innerHTML="";
-        renderReviews();
-      }catch(err){
-        alert("후기 등록 실패: "+err.message);
-      }
-    });
-
-    async function renderReviews(){
-      const q=query(collection(db,`reviews_${projectId}`),orderBy("date","desc"));
-      const snap=await getDocs(q);
-
-      if(snap.empty){
-        reviewList.innerHTML='<div class="muted">아직 후기가 없습니다.</div>';
-        return;
-      }
-
-      reviewList.innerHTML=snap.docs.map(doc=>{
-        const r=doc.data();
-        return `
-          <div class="review-card">
-            <div class="author">🐾 ${r.reviewer}</div>
-            <div class="text">${r.text}</div>
-            ${r.imageUrls?.length ? 
-              `<div class="photos">${r.imageUrls.map(u=>`<img src="${u}" alt="후기사진">`).join("")}</div>` 
-            : ""}
-          </div>
-        `;
-      }).join('');
-    }
-
-    renderProject();
-    renderReviews();
+    render();
   </script>
 </body>
 </html>
