--- a/index.html
+++ b/index.html
@@ -6,79 +6,159 @@
   <title>Project.PAW — 개인과 개인을 잇는 후원 플랫폼</title>
   <link rel="stylesheet" href="common.css"/>
   <link rel="stylesheet" href="app.min.css"/>
-  <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet"/>
+  <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet" />
   <style>
     :root{
       --ink:#111;
       --sub:#555;
-      --accent:#E87722;
+      --accent:#E87722; /* Pantone 16-1359 */
       --line:#eaeaea;
       --bg:#fff;
     }
-    body{margin:0;background:var(--bg);color:var(--ink);
-         font-family:'SUIT Variable','Pretendard','Inter',system-ui,sans-serif}
-    .container{max-width:1200px;margin:0 auto;padding:0 20px}
+    html,body{
+      margin:0;
+      background:var(--bg);
+      color:var(--ink);
+      font-family:'SUIT Variable','Pretendard','Inter',system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif
+    }
+    .container{max-width:1200px; margin:0 auto; padding:0 20px}
     section{padding:64px 0}
 
     /* Hero */
-    .hero{text-align:center;padding:120px 20px 60px}
-    .hero h1{margin:0 0 24px;font-size:2.8rem;font-weight:900;line-height:1.3;color:var(--ink)}
-    .hero h1 span{color:var(--accent)}
+    .hero{text-align:center;padding:160px 20px 70px;background:var(--bg)}
+    .hero h1{
+      margin:0 0 24px;
+      font-size:3.2rem;
+      font-weight:900;
+      line-height:1.3;
+      color:var(--ink);
+      position:relative;
+      display:inline-block;
+    }
+    .hero h1::after{
+      content:"";
+      position:absolute;
+      left:0; bottom:-8px;
+      width:100%; height:14px;
+      background:var(--accent);
+      z-index:-1;
+      border-radius:4px;
+    }
+    .hashtags{
+      margin-top:24px;
+      font-size:1.2rem;
+      color:var(--sub);
+      font-weight:600;
+      line-height:1.8;
+    }
+    .hashtags span{
+      display:inline-block;
+      margin-right:12px;
+      color:var(--accent);
+      font-weight:800;
+    }
 
-    /* Grid & Cards */
+    /* Story Cards */
+    .story-cards{background:var(--bg); padding:60px 0}
+    .card-grid{display:grid; grid-template-columns:repeat(2,1fr); gap:32px}
+    @media (max-width:768px){.card-grid{grid-template-columns:1fr}}
+    .story-card{
+      background:#fff; border:2px solid var(--accent); border-radius:20px;
+      padding:40px 30px; text-align:left; box-shadow:0 6px 14px rgba(0,0,0,.06);
+      display:flex; flex-direction:column;
+    }
+    .card-top{display:flex; justify-content:space-between; align-items:center; font-size:1rem; font-weight:700; margin-bottom:16px; color:var(--accent); padding-bottom:12px; border-bottom:1px solid var(--line)}
+    .story-card h2{font-size:1.9rem; font-weight:800; margin:0 0 24px; line-height:1.4; color:var(--ink)}
+    .story-card ul{list-style:none; padding:0; margin:0; display:flex; flex-direction:column; gap:16px}
+    .story-card li{border:2px solid var(--accent); border-radius:14px; padding:14px 18px; font-size:1.05rem; font-weight:600; background:#fff; color:var(--ink)}
+    .story-card li:hover{background:#fafafa}
+
+    /* Projects */
+    .projects h2{margin:0;font-size:2rem;font-weight:900;color:var(--ink)}
+    .projects .header{display:flex;justify-content:space-between;align-items:center;margin-bottom:32px}
     .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(280px,1fr));gap:32px}
-    .project-card{position:relative;border-radius:16px;overflow:hidden;background:#fff;transition:.3s;text-decoration:none;color:inherit}
-    .project-card:hover{transform:translateY(-6px);box-shadow:0 10px 20px rgba(0,0,0,0.15)}
-
-    .project-card .thumb{position:relative;height:220px;overflow:hidden}
-    .project-card .thumb img{width:100%;height:100%;object-fit:cover}
-    .project-card .overlay{
-      position:absolute;top:0;left:0;right:0;bottom:0;
-      display:flex;flex-direction:column;justify-content:flex-end;
-      background:linear-gradient(to top,rgba(0,0,0,0.55),rgba(0,0,0,0));
-      color:#fff;padding:16px
-    }
-    .project-card .overlay .badge{
-      align-self:flex-start;
-      background:var(--accent);color:#fff;padding:6px 12px;
-      border-radius:8px;font-size:.9rem;font-weight:700;margin-bottom:auto
-    }
-    .project-card .overlay h3{font-size:1.3rem;font-weight:800;margin:0}
-    .project-card .overlay .summary{margin:4px 0 0;font-size:1rem;opacity:.9}
-    .project-card .overlay .hover-text{display:none;text-align:center;font-size:.95rem;font-weight:600}
-    .project-card:hover .overlay .hover-text{display:block}
-
-    .project-card .body{padding:16px;background:#fff}
-    .project-card .hearts{color:var(--accent);font-weight:700;margin-bottom:6px}
-    .project-card .key-message{color:var(--accent);font-weight:600;margin:6px 0}
-    .progress{background:#eee;border-radius:6px;overflow:hidden;height:10px;margin:8px 0}
+    .project-card{display:flex;flex-direction:column;background:#fff;border:1px solid var(--line);border-radius:16px;overflow:hidden;transition:.2s;text-decoration:none;color:inherit}
+    .project-card:hover{transform:translateY(-3px);box-shadow:0 6px 16px rgba(0,0,0,.1)}
+    .thumb{position:relative}
+    .thumb img{width:100%;height:200px;object-fit:cover}
+    .badge{position:absolute;bottom:12px;left:12px;background:var(--accent);color:#fff;padding:6px 12px;border-radius:8px;font-size:.9rem;font-weight:600}
+    .body{padding:24px}
+    h3{margin:0 0 14px;font-size:1.4rem;font-weight:800;color:var(--ink)}
+    .summary{margin:0 0 20px;font-size:1.1rem;color:var(--sub);line-height:1.6;max-height:3.4em;overflow:hidden}
+    .progress{background:#eee;border-radius:6px;overflow:hidden;height:10px;margin-bottom:12px}
     .progress .bar{background:var(--accent);height:100%}
-    .stats{display:flex;justify-content:space-between;font-size:.9rem;color:var(--sub);margin-top:6px}
-    .stats span strong{font-weight:800;color:var(--ink);margin-left:4px}
+    .stats{display:flex;justify-content:space-between;font-size:1rem;color:var(--sub);margin-bottom:18px}
+    .stats span strong{font-size:1.15rem;font-weight:800;color:var(--ink);margin-left:4px}
+    .rescuer{display:flex;align-items:center;gap:8px;font-size:1rem;font-weight:700;color:var(--ink)}
+    .rescuer .avatar{font-size:1.1rem}
+    .muted{color:#888}
   </style>
 </head>
 <body>
+  <!-- header include -->
   <div data-include="header"></div>
 
+  <!-- Hero -->
   <section class="hero">
     <div class="container">
-      <h1>개인↔개인을 연결하는, <span>직접 후원의 시작</span></h1>
-      <p>#유기동물구조 #직접후원 #투명모금</p>
+      <h1>개인과 개인을 연결하는, 직접 후원의 시작</h1>
+      <div class="hashtags">
+        <span>#유기동물구조</span>
+        <span>#직접후원</span>
+        <span>#투명모금</span>
+      </div>
     </div>
   </section>
 
+  <!-- Story Cards (압축 버전) -->
+  <section class="story-cards">
+    <div class="container card-grid">
+      
+      <!-- Card 1 -->
+      <div class="story-card">
+        <div class="card-top"><span>PROJECT PAW</span><span class="dots">● ● ●</span></div>
+        <h2>❝ 돈보다 마음이 먼저 ❞</h2>
+        <ul>
+          <li>구조 순간, 망설임을 용기로</li>
+          <li>도움은 본능, 연결은 선택</li>
+          <li>작은 마음이 모여 큰 힘이 됨</li>
+        </ul>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="story-card">
+        <div class="card-top"><span>PROJECT PAW</span><span class="dots">● ● ●</span></div>
+        <h2>❝ 책임 없는 구조는 없다 ❞</h2>
+        <ul>
+          <li>구조자 30% 직접 부담</li>
+          <li>후원금 100% 전달 (수수료는 PAW 부담)</li>
+          <li>후기 & 영수증 공유로 투명성 보장</li>
+        </ul>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- Projects -->
   <section class="projects">
     <div class="container">
-      <h2 style="font-size:2rem;font-weight:900;margin-bottom:32px">진행 중인 프로젝트</h2>
-      <div id="projects-grid" class="grid"><div class="muted">불러오는 중...</div></div>
+      <div class="header">
+        <h2>진행 중인 프로젝트</h2>
+        <a href="project_list.html" class="btn primary" style="color:#fff;background:var(--accent);padding:10px 16px;border-radius:8px;font-weight:700;text-decoration:none;">모두 보기 →</a>
+      </div>
+      <div id="projects-grid" class="grid">
+        <div class="muted">불러오는 중...</div>
+      </div>
     </div>
   </section>
 
+  <!-- footer include -->
   <div data-include="footer"></div>
 
   <script type="module">
     import { injectLayout } from './js/include.js';
     import { apiListProjects } from './js/api.js';
+
     injectLayout({ active:'home' });
 
     const $grid=document.getElementById('projects-grid');
@@ -92,30 +172,33 @@
     async function render(){
       try{
         const list=await apiListProjects({status:'approved',limit:12});
-        if(!list.length){$grid.innerHTML='<div class="muted">아직 승인된 프로젝트가 없습니다.</div>';return;}
+        if(!list.length){
+          $grid.innerHTML='<div class="muted">아직 승인된 프로젝트가 없습니다.</div>';
+          return;
+        }
         $grid.innerHTML=list.map(p=>`
           <a class="project-card" href="project.html?id=${encodeURIComponent(p.id)}">
             <div class="thumb">
               <img src="${cover(p)}" alt=""/>
-              <div class="overlay">
-                <span class="badge">${p.adminApproved?'진행중':'대기중'}</span>
-                <h3>${p.name??'(이름 없음)'}</h3>
-                <p class="summary">${p.summary??''}</p>
-                <div class="hover-text">자세히 보기 →</div>
-              </div>
+              <span class="badge">${p.status==='approved'?'진행중':'대기중'}</span>
             </div>
             <div class="body">
-              <div class="hearts">❤️ 연결된 마음 <strong>${p.supporterCount??0}</strong>명</div>
-              ${p.keyMessage?`<p class="key-message">❝ ${p.keyMessage} ❞</p>`:''}
+              <h3>${p.name??'(이름 없음)'}</h3>
+              <p class="summary">${p.summary??''}</p>
               <div class="progress"><div class="bar" style="width:${Math.min(100,Math.round((p.currentAmount||0)/p.goalAmount*100))}%"></div></div>
               <div class="stats">
                 <span>목표<strong>${fmt(p.goalAmount)}</strong>원</span>
                 <span>달성<strong>${fmt(p.currentAmount||0)}</strong>원</span>
+                <span>참여자<strong>${p.supporterCount??0}</strong>명</span>
               </div>
+              <div class="rescuer"><span class="avatar">🐾</span><span class="name">${p.rescuerName??'익명 구조자'}</span></div>
             </div>
           </a>
         `).join('');
-      }catch(e){console.error(e);$grid.innerHTML='<div class="muted">프로젝트를 불러오지 못했습니다.</div>';}
+      }catch(e){
+        console.error(e);
+        $grid.innerHTML='<div class="muted">프로젝트를 불러오지 못했습니다.</div>';
+      }
     }
     render();
   </script>
